--- a/vagrant/nfs/Vagrantfile
+++ b/vagrant/nfs/Vagrantfile
@@ -13,58 +13,82 @@ Vagrant::Config.run do |config|
   # doesn't already exist on the user's system.
   config.vm.box_url = "https://s3-eu-west-1.amazonaws.com/rosstimson-vagrant-boxes/debian-squeeze-64-rvm.box"
 
-  # Assign this VM to a host-only network IP, allowing you to access it
-  # via the IP. Host-only networks can talk to the host machine as well as
-  # any other machines on the same network, but cannot be accessed (through this
-  # network interface) by any external networks.
-  # config.vm.network :hostonly, "192.168.33.10"
-
-  # Assign this VM to a bridged network, allowing you to connect directly to a
-  # network using the host's network device. This makes the VM appear as another
-  # physical device on your network.
-  # config.vm.network :bridged
-
-  # Forward a port from the guest to the host, which allows for outside
-  # computers to access the VM, whereas host only networking does not.
-  # config.vm.forward_port 80, 8080
-
-  # Share an additional folder to the guest VM. The first argument is
-  # an identifier, the second is the path on the guest to mount the
-  # folder, and the third is the path on the host to the actual folder.
-  # config.vm.share_folder "v-data", "/vagrant_data", "../data"
-
   # Enable provisioning with chef solo, specifying a cookbooks path (relative
   # to this Vagrantfile), and adding some recipes and/or roles.
   #
-  # config.vm.provision :chef_solo do |chef|
-  #   chef.cookbooks_path = "cookbooks"
-  #   chef.add_recipe "mysql"
-  #   chef.add_role "web"
+  config.vm.provision :chef_solo do |chef|
+	chef.cookbooks_path = "../../cookbooks"
+    chef.add_recipe("web_host")
+  #  chef.add_recipe "mysql"
+  #  chef.add_role "web"
   #
   #   # You may also specify custom JSON attributes:
   #   chef.json = { :mysql_password => "foo" }
-  # end
+	chef.log_level = :debug
+  end
 
-  # Enable provisioning with chef server, specifying the chef server URL,
-  # and the path to the validation key (relative to this Vagrantfile).
-  #
-  # The Opscode Platform uses HTTPS. Substitute your organization for
-  # ORGNAME in the URL and validation key.
-  #
-  # If you have your own Chef Server, use the appropriate URL, which may be
-  # HTTP instead of HTTPS depending on your configuration. Also change the
-  # validation key to validation.pem.
-  #
-  # config.vm.provision :chef_client do |chef|
-  #   chef.chef_server_url = "https://api.opscode.com/organizations/ORGNAME"
-  #   chef.validation_key_path = "ORGNAME-validator.pem"
-  # end
-  #
-  # If you're using the Opscode platform, your validator client is
-  # ORGNAME-validator, replacing ORGNAME with your organization name.
-  #
-  # IF you have your own Chef Server, the default validation client name is
-  # chef-validator, unless you changed the configuration.
-  #
-  #   chef.validation_client_name = "ORGNAME-validator"
+	config.vm.define :boson do |config|
+	  config.vm.customize do |vm|
+		vm.memory_size = 128
+	  end
+
+	  # Assign this VM to a host-only network IP, allowing you to access it
+	  # via the IP. Host-only networks can talk to the host machine as well as
+	  # any other machines on the same network, but cannot be accessed (through this
+	  # network interface) by any external networks.
+	  config.vm.network :hostonly, "172.16.0.100"
+
+	  # Assign this VM to a bridged network, allowing you to connect directly to a
+	  # network using the host's network device. This makes the VM appear as another
+	  # physical device on your network.
+	  # config.vm.network :bridged
+
+	  # Forward a port from the guest to the host, which allows for outside
+	  # computers to access the VM, whereas host only networking does not.
+	  # config.vm.forward_port 80, 8080
+
+	  # Share an additional folder to the guest VM. The first argument is
+	  # an identifier, the second is the path on the guest to mount the
+	  # folder, and the third is the path on the host to the actual folder.
+	  # config.vm.share_folder "v-data", "/vagrant_data", "../data"
+
+	  # Enable provisioning with chef server, specifying the chef server URL,
+	  # and the path to the validation key (relative to this Vagrantfile).
+	  #
+	  # The Opscode Platform uses HTTPS. Substitute your organization for
+	  # ORGNAME in the URL and validation key.
+	  #
+	  # If you have your own Chef Server, use the appropriate URL, which may be
+	  # HTTP instead of HTTPS depending on your configuration. Also change the
+	  # validation key to validation.pem.
+	  #
+	  # config.vm.provision :chef_client do |chef|
+	  #   chef.chef_server_url = "https://api.opscode.com/organizations/ORGNAME"
+	  #   chef.validation_key_path = "ORGNAME-validator.pem"
+	  # end
+	  #
+	  # If you're using the Opscode platform, your validator client is
+	  # ORGNAME-validator, replacing ORGNAME with your organization name.
+	  #
+	  # IF you have your own Chef Server, the default validation client name is
+	  # chef-validator, unless you changed the configuration.
+	  #
+	  #   chef.validation_client_name = "ORGNAME-validator"
+	end
+
+	config.vm.define :chargion do |config|
+	  config.vm.customize do |vm|
+		vm.memory_size = 128
+	  end
+
+#	  config.vm.box = "debian-squeeze-64-rvm"
+#	  config.vm.box_url = "https://s3-eu-west-1.amazonaws.com/rosstimson-vagrant-boxes/debian-squeeze-64-rvm.box"
+	  config.vm.network :hostonly, "172.16.0.101"
+
+#	  config.vm.provision :chef_solo do |chef|
+#		chef.cookbooks_path = "../../cookbooks"
+#	    chef.add_recipe("web_host")
+#		chef.log_level = :debug
+#	  end
+	end
 end
